Tue Nov 13 13:42:27 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Edge checks have
	been optimized yesterday, but insertion of triangle centroids can
	also be optimized to check only triangles which have been modified
	during previous iteration.  This improves performance for very
	large patches.
	* src/org/jcae/mesh/amibe/patch/VirtualHalfEdge2D.java (split3):
	Add an argument to collect the set of triangles which are modified
	by this method.  This method now returns the total number of edges
	swapped during processing, and 0 when vertex had not been inserted.
	This is useful for debug messages.
	* src/org/jcae/mesh/xmldata/MeshToMMesh3DConvert.java: Write <shape>
	element into jcae3d XML file, as in other jcae[12]d files.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Rename into
	* src/org/jcae/mesh/amibe/algos3d/QEMDecimateHalfEdge.java:  ...this
	* src/org/jcae/mesh/amibe/algos3d/LengthDecimateHalfEdge.java: New
	method to decimate edges, they are removed iteratively depending on
	their length.
	* src/org/jcae/mesh/amibe/validation/QualityFloat.java: Also print
	standard deviation.

Mon Nov 12 13:14:47 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Use MARKED flag to
	tag edges which cannot be split, they can be skipped during next
	iterations.
	* src/org/jcae/mesh/amibe/ds/Triangle.java: New addAllowDuplicates()
	and size() methods for Triangle.List inner class.

Sun Nov 11 22:53:19 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/patch/Mesh2D.java: Store compGeomStack
	top value into a private member to avoid many calls to
	compGeomStack.peek().
	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/metrics/Metric2D.java
	  src/org/jcae/mesh/amibe/patch/Mesh2D.java
	  src/org/jcae/mesh/amibe/patch/Calculus.java: Rename distance()