@@ -1,3 +1,8 @@
+Wed Nov 14 11:27:10 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/xmldata/MeshExporter.java: Copy Amibe2VTK class
+	into MeshExporter.
+
 Tue Nov 13 13:42:27 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Edge checks have
